--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.1",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
+    "leaflet": "^1.9.4",
     "prettier": "^3.0.3",
     "vite": "^4.4.11",
     "vitest": "^0.34.6"
