--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "bootstrap": "^4.6.2",
+    "jquery": "^3.7.1",
+    "jsonwebtoken": "^9.0.2",
     "pinia": "^2.1.7",
+    "popper.js": "^1.16.1",
+    "vee-validate": "^4.11.8",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
