--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vee-validate": "^4.11.8",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
+    "vuex": "^4.1.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
@@ -35,6 +36,8 @@
     "leaflet": "^1.9.4",
     "prettier": "^3.0.3",
     "vite": "^4.4.11",
-    "vitest": "^0.34.6"
+    "vitest": "^0.34.6",
+    "vue-loader": "^15.11.1",
+    "vue-template-compiler": "^2.7.15"
   }
 }
