--- a/package.json
+++ b/package.json
@@ -11,29 +11,37 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.2",
+    "@tabler/icons-vue": "^2.40.0",
+    "@turf/turf": "^6.5.0",
     "axios": "^1.5.1",
     "bootstrap": "^4.6.2",
     "jquery": "^3.7.1",
+    "json-server": "^0.17.4",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
+    "perfect-scrollbar": "^1.5.5",
     "pinia": "^2.1.7",
     "popper.js": "^1.16.1",
+    "primevue": "^3.38.1",
+    "sweetalert2": "^11.9.0",
     "vee-validate": "^4.11.8",
     "vue": "^3.3.4",
+    "vue-carousel-3d": "^1.0.1",
+    "vue-loading-overlay": "6.0",
     "vue-router": "^4.2.5",
+    "vuejs-paginate": "^2.1.0",
+    "vuejs-paginate-next": "^1.0.2",
     "vuex": "^4.1.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
+    "@types/leaflet": "^1.9.7",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
-    "@vue-leaflet/vue-leaflet": "^0.10.1",
-    "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.1",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
-    "leaflet": "^1.9.4",
     "prettier": "^3.0.3",
     "vite": "^4.4.11",
     "vitest": "^0.34.6",
