--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@turf/turf": "^6.5.0",
     "axios": "^1.5.1",
     "bootstrap": "^4.6.2",
+    "faye-websocket": "^0.11.4",
+    "isomorphic-ws": "^5.0.0",
     "jquery": "^3.7.1",
     "json-server": "^0.17.4",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "perfect-scrollbar": "^1.5.5",
     "pinia": "^2.1.7",
     "popper.js": "^1.16.1",
@@ -33,6 +36,8 @@
     "vuejs-paginate": "^2.1.0",
     "vuejs-paginate-next": "^1.0.2",
     "vuex": "^4.1.0",
+    "websocket": "^1.0.34",
+    "ws": "^8.14.2",
     "yup": "^1.3.2"
   },
   "devDependencies": {
