--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
+    "papaparse": "^5.4.1",
     "perfect-scrollbar": "^1.5.5",
     "pinia": "^2.1.7",
     "popper.js": "^1.16.1",
+    "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.39.0",
     "sweetalert2": "^11.9.0",
@@ -44,6 +46,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@types/leaflet": "^1.9.7",
+    "@types/papaparse": "^5.3.11",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vue/test-utils": "^2.4.1",
