--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "vuex": "^4.1.0",
     "websocket": "^1.0.34",
     "ws": "^8.14.2",
+    "xlsx": "^0.18.5",
     "yup": "^1.3.2"
   },
   "devDependencies": {
